cmake_minimum_required (VERSION 2.8)
cmake_policy(SET CMP0054 OLD)

project (Mission)

option(NO_THREADS "Single-threaded, synchronous mode" OFF)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")

if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	set(SFML_ROOT "${CMAKE_SOURCE_DIR}/thrdparty/SFML")
endif()

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")

set(SRCS ${SRCS} 
	src/main.cpp
	src/world.cpp
	src/engine.cpp
	src/assets.cpp
	src/spaces.cpp)

if(NO_THREADS)
	add_definitions(-DNO_THREADS)
	set(SRCS ${SRCS} src/coworker_sync.cpp)
else()
	add_definitions(-DWITH_THREADS)
	set(SRCS ${SRCS} src/coworker_async.cpp)
endif()

include(CheckCXXCompilerFlag)

CHECK_CXX_COMPILER_FLAG("-std=c++17" COMPILER_SUPPORTS_CXX17)
CHECK_CXX_COMPILER_FLAG("-std=c++1z" COMPILER_SUPPORTS_CXX1z)
CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
CHECK_CXX_COMPILER_FLAG("-std=c++1y" COMPILER_SUPPORTS_CXX1y)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
CHECK_CXX_COMPILER_FLAG("-pedantic" COMPILER_SUPPORTS_PEDANTIC)
CHECK_CXX_COMPILER_FLAG("-fno-rtti" COMPILER_SUPPORTS_FNO_RTTI)
CHECK_CXX_COMPILER_FLAG("/GR-" COMPILER_SUPPORTS_GR_MINUS)

if(COMPILER_SUPPORTS_CXX17)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
elseif(COMPILER_SUPPORTS_CXX1z)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z")
elseif(COMPILER_SUPPORTS_CXX14)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
elseif(COMPILER_SUPPORTS_CXX1y)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
elseif(COMPILER_SUPPORTS_CXX11)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
endif()

if((COMPILER_SUPPORTS_CXX17
	OR COMPILER_SUPPORTS_CXX1z
	OR COMPILER_SUPPORTS_CXX14
	OR COMPILER_SUPPORTS_CXX1y
	OR COMPILER_SUPPORTS_CXX11
	OR COMPILER_SUPPORTS_CXX0X)
	AND COMPILER_SUPPORTS_PEDANTIC)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic")
endif()

find_package(SFML 2.3 COMPONENTS system window graphics audio REQUIRED)

if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	find_package(SFML 2.3 COMPONENTS main REQUIRED)
endif()

find_package(Threads REQUIRED)

include_directories(${SFML_INCLUDE_DIR})
add_executable(mission ${SRCS})

if (("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC") AND COMPILER_SUPPORTS_GR_MINUS)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GR-")
elseif (COMPILER_SUPPORTS_FNO_RTTI)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
endif()

if((NOT NO_THREADS) AND THREADS_HAVE_PTHREAD_ARG)
	set_property(TARGET mission APPEND PROPERTY COMPILE_OPTIONS "-pthread")
	set_property(TARGET mission APPEND PROPERTY INTERFACE_COMPILE_OPTIONS "-pthread")
endif()

if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	set_property(TARGET mission PROPERTY WIN32_EXECUTABLE TRUE)
endif()

if(CMAKE_THREAD_LIBS_INIT)
	target_link_libraries(mission "${CMAKE_THREAD_LIBS_INIT}")
endif()

target_link_libraries(mission ${SFML_LIBRARIES})
